# temp-assignment

./: .gitignore  AI_LEARNING_REFLECTION_TEMPLATE.md  AI_LEARNING_TEMPLATE.md  CODESPACES_SETUP_GUIDE.md  CONTAINER_UPDATE_SUCCESS.md  Dockerfile.grading  LICENSE  Makefile  PROJECT_STATUS.md  README.md  grade-report.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test-and-grade.yml
notebooks/: 00_copilot_setup_and_gis_context.ipynb  00_start_here_overview.ipynb  01_function_load_and_explore_gis_data.ipynb  02_function_filter_environmental_data.ipynb  03_function_calculate_station_statistics.ipynb  04_function_join_station_data.ipynb  05_function_save_processed_data.ipynb  07_function_multi_condition_filtering.ipynb  07_function_validate_coordinate_data.ipynb  08_function_analyze_temporal_patterns.ipynb  09_function_analyze_temporal_patterns.ipynb  09_function_setup_containerized_environment.ipynb
output/: processed_environmental_data.csv  station_statistics.csv
samples/good/: AI_LEARNING_REFLECTION.md  requirements.txt
samples/good/data/: create_sample_data.py  data_dictionary.md
samples/good/src/: pandas_basics.py  pandas_basics_template.py
samples/good/tests/: test_pandas_basics.py
samples/medium/: AI_LEARNING_REFLECTION.md  pytest.ini
samples/medium/data/: real_data_preview.py
samples/medium/src/: pandas_basics.py
samples/medium/tests/: test_pandas_basics.py
samples/poor/: Makefile
samples/poor/src/: backup_pandas_basics.py  pandas_basics.py
samples/poor/src/pandas_gis_assignment/: __init__.py
samples/poor/tests/: test_pandas_basics.py
scripts/: BaseGradingEngine.py  calculate_grade.py  calculate_grade_old.py  grade_assignment.py
src/: pandas_basics.py
tests/: test_pandas_basics.py
